...
                android:textColor="#FFFFFF"
                android:textSize="10sp" />
        </RadioGroup>

        <!-- Board Preview Section -->
        <FrameLayout
            android:id="@+id/board_preview_container"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginBottom="16dp"
            android:background="#000000">
            
            <TextView
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/export_level_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/editor_export_level"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_rounded_red_outline"
...
