...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Settings button - Gear icon -->
        <ImageButton
            android:id="@+id/settings_icon_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/settings_grid_scaled"
            android:contentDescription="@string/settings_a11y"
            android:background="@drawable/circular_button_gray"
            android:scaleType="centerInside"
...
